--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,34 +1,33 @@
 name: Deploy React App to GitHub Pages
+
 on:
   push:
-    branches:
-      - main
-permissions:
-  contents: read
-  pages: write
-  id-token: write
+    branches: [main]
+
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-          working-directory: personal-cv-react # 👈 change if folder name is
-      steps:
-        - uses: actions/checkout@v4
-        - uses: actions/setup-node@v4
-      with:
-        node-version: 20
-        cache: npm
-        cache-dependency-path: personal-cv-react/package-lock.json
-    - run: npm install
-    - run: npm run build
-    - uses: actions/configure-pages@v4
-    - uses: actions/upload-pages-artifact@v3
-      with:
-        path: personal-cv-react/dist'
-  deploy:
-    needs:build
-    runs-on: ubuntu-test
     steps:
-    - name: Deploy to GitHub Pages
-      uses: actions/deploy-pages@v4
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Install dependencies
+        run: |
+          cd personal-cv-react
+          npm install
+
+      - name: Build
+        run: |
+          cd personal-cv-react
+          npm run build
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./personal-cv-react/dist
